refactor: use Collections.emptyList() instead of List.of()
https://github.com/RescueRangerA/java-filmorate/pull/14#discussion_r1057357289
https://github.com/RescueRangerA/java-filmorate/pull/14#discussion_r1057357212